# PairAnalysisPhenix

./: .ctags  .ctags_with_yaml-cpp  .gitignore  .gitmodules  CMakeLists.txt  DM.cpp  ELossTOFe.cpp  FitSpectra.cpp  GUIDM.cpp  Makefile  Makefile.inc  \  makefile_progress.py  rootlogon.C  runAll.sh
Analysis/: README  README.md
Analysis/ext/RAB/AuAu200/: kaon_1020.txt  kaon_4060.txt  kaon_6093.txt  phi1020_0-20.txt  (+17 more)
Analysis/include/: BW.h  Box.h  CentralityConfiguration.hpp  CentralityTypes.h  CentralityTypes.hpp  DeadAreasCuts.hpp  ErrorHandler.h  GlobalConfiguration.h  HepMCReader.h  InputTool.h  InvM.h  LogoDrawer.h  M2IdentPar.hpp  M2Par.hpp  MS.h  NiceFit.h  OutputTool.h  ParInv.h  ParMS.h  Particles.h  RABPainter.h  RCPPainter.h  RunConfiguration.hpp  SpectraPainter.h  StrTool.h  TCanvasPrinter.h  Table.h  Time.h  Tools.h
Analysis/src/: ADCEff.cc  DM.cc  DeadAreasCuts.cpp  DrawRAB.cc  DrawRCP.cc  DrawSpectra.cc  HEProotTotxt.cc  InteractCanv.cc  MS.cc  PrintTables.cc  rootlogon.C
GUI/: DM.cpp  MInvFit.cpp  TimingDM.cpp
SimAnalysis/: Makefile
SimAnalysis/include/: AnalyzeEmbedding.hpp  AnalyzeHeatMaps.hpp  AnalyzeResonance.hpp  AnalyzeSingleTrack.hpp  AnalyzeTrackPair.hpp  EffTreeReader.hpp  EmbAnT.hpp  EmbTreeReader.hpp  Ident.h  Ident.hpp  IdentFun.hpp  M2Par.hpp  PTrackFun.hpp  PairAnalysis.h  ParAnalyzeEmbedding.hpp  ParAnalyzeHeatMaps.hpp  ParAnalyzeResonance.hpp  ParAnalyzeSingleTrack.hpp  ParAnalyzeTrackPair.hpp  ParEmb.h  ParEmb.hpp  ParHeatMapper.h  ParPair.h  ParSingle.h  ParWidth.h  Particles.h  Particles.hpp  Run7AuAuM2Par.h  STrackFun.hpp  SingleAnalysis.h
SimAnalysis/src/: AnalyzeEmbedding.cpp  AnalyzeHeatMaps.cpp  AnalyzeResonance.cpp  AnalyzeSingleTrack.cpp  AnalyzeTrackPair.cpp  EffTreeReader.cpp  EmbAnT.cpp  EmbTreeReader.cpp  HeatMapper.cpp  IdentFun.cpp  Mv.cc  PTrackFun.cpp  PairAnalyze.cpp  STrackFun.cpp  SingleAnalyze.cpp  WidthAnalyze.cpp  rootlogon.C
analysis/src/: ADCEff.cc  DrawRAB.cc  DrawRCP.cc  DrawSpectra.cc  EmbEff.cc  FitSpectra.cpp  GoodRunsSelector.cc  GuiInvM.cc  InvM.cc  M2Eff.cc  PairEff.cc  RegEff.cc  Width.cc  rootlogon.C
cling/: ConstantTimingOffset.cpp  Cut1D.cpp  DM.cpp  EMCalDM.cpp  ElossFit.cpp  RAB_HeAu_central_comp.cpp  RAB_central.cpp  RAB_test.cpp  RunByRunTimingOffset.cpp  SimElossFit  TExpFit.cpp  TOFwADC.cpp
cling/Run14HeAu200/: KStar892.cpp  RAB_KStar892.cpp
data/: .gitignore  checksum_sim_trees
data/Deadmaps/Run14HeAu200/: EMCale2.txt  PC1e.txt
data/GoodRunsList/: Run14HeAu200.txt  Run14HeAu200_for_cc.txt  Run14HeAu200_for_se.txt
data/Parameters/: .gitignore
data/RAB/AuAu200/: KStar892_0-20.txt
data/RAB/HeAu200/: KStar892_0-20.txt  KStar892_0-20_Vlad.txt  KStar892_0-88_Vlad.txt  KStar892_20-40_Vlad.txt  KStar892_40-60_Vlad.txt  KStar892_60-88_Vlad.txt  phi1020PHENIX.yaml  pi0PHENIX.yaml  ppbar0-20PHENIX.txt
data/Results/Run14HeAu200/: 20292_KStar892.root
data/SimTrees/Run14HeAu200/: Resonance
data/Spectra/AuAu200/: KStar892_0-20.txt  KStar892_20-40.txt  KStar892_40-60.txt  KStar892_60-93.txt  KStar892_MB.txt
data/Spectra/HeAu200/: KStar892.root  k+Fit.json  k+PHENIX.yaml  k-Fit.json  k-PHENIX.yaml  pFit.json  pPHENIX.yaml  pbarFit.json  pbarPHENIX.yaml  pi+Fit.json  pi+PHENIX.yaml  pi-Fit.json  pi-PHENIX.yaml
data/Spectra/Run14HeAu200/: 20292_KStar892.root
data/Spectra/pp200/: KStar892.root
etc/: Makefile  Makefile.inc
include/: AnalyzeHeatMaps.hpp  AnalyzeRealMInv.hpp  AnalyzeResonance.hpp  AnalyzeSimEmbedding.hpp  AnalyzeSimResonance.hpp  AnalyzeSimSingleTrack.hpp  AnalyzeSimWidthlessResonance.hpp  AnalyzeSingleTrack.hpp  AnalyzeWidthlessResonance.hpp  CalibrateSigmalizedResiduals.hpp  CalibrateSimSigmalizedResiduals.hpp  Constants.hpp  Cut1D.hpp  DM.hpp  DataCutsSelector.hpp  DataMethodsSelector.hpp  DataSelector.h  DeadAreasCuts.h  DeadMapCutter.hpp  DeadMapSys.hpp  EffTreeReader.hpp  EstimateGaussianBroadening.hpp  EstimateRecEffOfResonance.hpp  EstimateResonanceEff.hpp  EstimateResults.hpp  EstimateSingleTrackEff.cpp  EstimateSingleTrackEff.hpp  EstimateSpectra.hpp  FindGoodRuns.hpp  FitFunc.hpp  GoodRunsSelector.hpp  IdentFun.hpp  InputReader.hpp  InputYAMLReader.hpp  InvM.h  M2IdentFit.hpp  MInv.hpp  PainterHelper.hpp  PairTrackFunc.hpp  ParAnalyzeEmbedding.hpp  (+13 more)
input/Run12CuAu200/: KStar.yaml  m2id.yaml  main.yaml  single_track_sim.yaml
input/Run14AuAu200/: main.yaml  single_track_sim.yaml
input/Run14HeAu200/: KStar.json  KStar.yaml  KStar892.yaml  calibration.json  m2id.yaml  main.json  main.yaml  phi1020.yaml  sim.json  single_track_sim.yaml
input/Run15pAl200/: m2id.yaml  main.yaml  single_track_sim.yaml
input/Run15pAu200/: m2id.yaml  main.yaml  single_track_sim.yaml
input/Run15pp200/: m2id.yaml  main.yaml  single_track_sim.yaml
par/Deadmaps/Run14HeAu200/: DCe, zDC<0.txt  DCe, zDC>=0.txt  DCw, zDC<0.txt  DCw, zDC>=0.txt  PC3w.txt  TOFe.txt  TOFw, ptofy>100.txt
scripts/: preliminary.pl
sim_analysis/: README.md
sim_analysis/src/: EmbAnalyze.cpp  HeatMapper.cpp  Makefile  Makefile.inc  SingleAnalyze.cpp
src/: AnalyzeEmbedding.cpp  AnalyzeGaussWidth.cpp  AnalyzeHeatMaps.cpp  AnalyzeRealMInv.cpp  AnalyzeResonance.cpp  AnalyzeSimEmbedding.cpp  AnalyzeSimResonance.cpp  AnalyzeSimSingleTrack.cpp  AnalyzeSimWidthlessResonance.cpp  AnalyzeSingleTrack.cpp  AnalyzeWidthlessResonance.cpp  CalibrateSigmalizedResiduals.cpp  CalibrateSimSigmalizedResiduals.cpp  Cut1D.cpp  DataCutsSelector.cpp  DataMethodsSelector.cpp  DeadMapCutter.cpp  DeadMapSys.cpp  ELossTOFe.cpp  EffTreeReader.cpp  EmbTreeReader.cpp  EstimateGaussianBroadening.cpp  EstimateRecEffOfResonance.cpp  EstimateResonanceEff.cpp  EstimateResults.cpp  EstimateSingleTrackEff.cpp  EstimateSpectra.cpp  FindGoodRuns.cpp  FitFunc.cpp  FitSpectra.cpp  GoodRunsSelector.cpp  IdentFun.cpp  InputReader.cpp  InputYAMLReader.cpp  M2IdentFit.cpp  MInv.cpp  MS.cc  Mv.cc  PainterHelper.cpp  PairTrackFunc.cpp  (+9 more)
tmp/include/: Box.hpp  ErrorHandler.hpp  IOTools.hpp  MathTools.hpp  OutputColor.hpp  StrTools.hpp  Table.hpp  Time.hpp
tmp/src/: Box.cpp  ErrorHandler.cpp  IOTools.cpp  StrTools.cpp  Table.cpp  Time.cpp
(+796 files in other folders)
